# gias

./: LICENSE  README.md  gias.py  gias_api.py  pyproject.toml
gias/: __init__.py
gias.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/: __init__.py  ballot_voting_analysis_20221213.py  gias_api.py
src/gias.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
